--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ disqusShortname = "yourdiscussshortname"
   name = "Email"
   icon = "fa fa-envelope fa-2x"
   weight = 3
-  url = "mailto:jipstavenuiter@gmail.com"
+  url = "mailto:info@jips.dev"
 
 # Menu links
 [[menu.main]]
